[metadata]
name = main
description = Main package
author = Liam Axon
license = custom
license_file = LICENSE
platforms = unix, linux, win64
classifiers =
    Programming Language :: Python :: 3

[options]
packages = 
    mainpackage
install_requires = 
    numpy>=1
python_requires =
    >= 3.8
package_dir =
    =src
zip_safe =
    no